--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -7,10 +7,21 @@
     "test": "jest",
     "prepare": "cd .. && husky install todo-cli/.husky"
   },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
+  },
   "author": "Arnab Sen <arnabsen1729@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "husky": "^8.0.3",
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4"
   }
 }
