--- a/todo-manager/package.json
+++ b/todo-manager/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
+    "lint": "eslint --fix .",
     "prepare": "cd .. && husky install todo-manager/.husky"
   },
   "author": "Arnab Sen <arnabsen1729@gmail.com>",
@@ -14,6 +15,19 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "husky": "^8.0.3"
+    "eslint": "^8.36.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.4"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
   }
 }
