--- a/todo-manager/package.json
+++ b/todo-manager/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\"",
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "dev": "nodemon index.js",
     "lint": "eslint --fix .",
     "prepare": "cd .. && husky install todo-manager/.husky"
   },
   "author": "Arnab Sen <arnabsen1729@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.10.0",
+    "sequelize": "^6.29.3"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
@@ -21,8 +25,12 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4"
+    "nodemon": "^2.0.21",
+    "prettier": "^2.8.4",
+    "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3"
   },
   "lint-staged": {
     "*.js": [
