--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -7,13 +7,14 @@
     "start": "node index.js",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "dev": "nodemon index.js",
+    "dev": "nodemon -e js,ejs",
     "lint": "eslint --fix .",
     "prepare": "cd .. && husky install todo-manager/.husky"
   },
   "author": "Arnab Sen <arnabsen1729@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.10.0",
     "sequelize": "^6.29.3"
