--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -14,12 +14,16 @@
   "author": "Arnab Sen <arnabsen1729@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.10.0",
-    "sequelize": "^6.29.3"
+    "sequelize": "^6.29.3",
+    "tiny-csrf": "^1.1.3"
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.36.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
