--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -14,10 +14,16 @@
   "author": "Arnab Sen <arnabsen1729@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.10.0",
     "sequelize": "^6.29.3",
     "tiny-csrf": "^1.1.3"
